# mecademic-ros

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
meca500_bringup/: CMakeLists.txt  package.xml
meca500_bringup/config/: meca500_controllers.yaml
meca500_bringup/launch/: meca500.launch.py
meca500_description/: CMakeLists.txt  package.xml
meca500_description/launch/: view_robot.launch.py
meca500_description/meshes/: link_4.dae  link_5.dae  link_6.dae
meca500_description/test/: test_urdf.py
meca500_description/urdf/: meca500.ros2_control.xacro  meca500.urdf  meca500.urdf.xacro  meca500_macro.xacro
meca500_description/usd/meca500.usd/: Meca500_R4.usda
meca500_description/usd/meca500.usd/Payload/: Contents.usda  Geometry.usda  Materials.usda  MaterialsLibrary.usdc  Physics.usda
meca500_hardware/: CMakeLists.txt  meca500_hardware.xml  package.xml
meca500_hardware/include/meca500_hardware/: meca500_system.hpp
meca500_hardware/src/: meca500_system.cpp
meca500_hardware/test/: test_meca500_system.cpp
meca500_moveit_config/: CMakeLists.txt  package.xml
meca500_moveit_config/config/: joint_limits.yaml  kinematics.yaml  meca500.srdf  moveit_controllers.yaml  ompl_planning.yaml
meca500_moveit_config/launch/: move_group.launch.py
