<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meca500_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for the Meca500 robot arm, providing launch files and configuration for ros2_control, controllers, and RViz visualization.</description>
  <maintainer email="maxime.riera@mecademic.com">Maxime Riera</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>meca500_description</exec_depend>
  <exec_depend>meca500_hardware</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
